...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnMini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="showPopup"
                    android:orientation="vertical">

...
                        android:textAlignment="center" />


                </RelativeLayout>

                <Button
                    android:id="@+id/btninvite"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="15dp"
                    android:text="Invite "

...
