...
            android:textColor="@color/white"
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:text="Proceed"
            android:id="@+id/btnProceed"
            android:background="#0d47a1"


            android:textColor="@color/bluelight"
            android:layout_marginLeft="25dp"
            android:layout_height="wrap_content"/>
...
