...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

...
